--- a/slides/ISOLATED_BRANCH_ENV/index.html
+++ b/slides/ISOLATED_BRANCH_ENV/index.html
@@ -152,7 +152,7 @@
 
         <!-- スライド一覧 -->
         <div style="margin-top: 4rem">
-          <h3 style="margin-bottom: 2rem">スライド一覧（全12ページ）</h3>
+          <h3 style="margin-bottom: 2rem">スライド一覧（全13ページ）</h3>
           <div class="slide-grid">
             <a href="slides/slide_01.html" class="slide-link">
               <div class="slide-number-badge">01</div>
@@ -188,18 +188,22 @@
             </a>
             <a href="slides/slide_09.html" class="slide-link">
               <div class="slide-number-badge">09</div>
-              <div class="slide-title">技術スタック</div>
+              <div class="slide-title">アーキテクチャ図</div>
             </a>
             <a href="slides/slide_10.html" class="slide-link">
               <div class="slide-number-badge">10</div>
-              <div class="slide-title">ワークフロー</div>
+              <div class="slide-title">技術スタック</div>
             </a>
             <a href="slides/slide_11.html" class="slide-link">
               <div class="slide-number-badge">11</div>
-              <div class="slide-title">マニフェスト管理</div>
+              <div class="slide-title">ワークフロー</div>
             </a>
             <a href="slides/slide_12.html" class="slide-link">
               <div class="slide-number-badge">12</div>
+              <div class="slide-title">マニフェスト管理</div>
+            </a>
+            <a href="slides/slide_13.html" class="slide-link">
+              <div class="slide-number-badge">13</div>
               <div class="slide-title">まとめ</div>
             </a>
           </div>
