fix: AI感のある絵文字を削除

--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_03.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_03.html
@@ -15,7 +15,7 @@
     <!-- スライドコンテナ -->
     <div class="slide-container">
       <div class="slide-content">
-        <h2>💡 解決策：独立環境の自動構築</h2>
+        <h2>解決策：独立環境の自動構築</h2>
 
         <div class="card">
           <h3>ブランチごとに独立した環境を自動で立ち上げる</h3>
@@ -26,19 +26,16 @@
 
         <div class="grid" style="margin-top: 3rem">
           <div class="card">
-            <div style="font-size: 2rem; margin-bottom: 1rem">🔗</div>
             <h3 style="font-size: 1.3rem">ブランチ移動不要</h3>
             <p>URLにアクセスするだけで各ブランチの動作を確認</p>
           </div>
 
           <div class="card">
-            <div style="font-size: 2rem; margin-bottom: 1rem">⚡</div>
             <h3 style="font-size: 1.3rem">完全自動化</h3>
             <p>プッシュするだけで環境が自動的に構築される</p>
           </div>
 
           <div class="card">
-            <div style="font-size: 2rem; margin-bottom: 1rem">🚀</div>
             <h3 style="font-size: 1.3rem">並列レビュー</h3>
             <p>複数のブラウザタブで同時に確認・比較が可能</p>
           </div>
@@ -52,7 +49,7 @@
     <!-- ナビゲーション -->
     <div class="navigation">
       <button class="nav-button prev">← 前へ</button>
-      <button class="nav-button home">🏠 ホーム</button>
+      <button class="nav-button home">ホーム</button>
       <button class="nav-button next">次へ →</button>
     </div>
 
