--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_05.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_05.html
@@ -15,7 +15,7 @@
     <!-- スライドコンテナ -->
     <div class="slide-container">
       <div class="slide-content">
-        <h2>🤯 具体的にどんな問題があるのか</h2>
+        <h2>具体的にどんな問題があるのか</h2>
 
         <p style="font-size: 1.3rem; margin-bottom: 2rem">
           あなたは今、Cursor
@@ -61,7 +61,7 @@
               margin: 0;
             "
           >
-            レビューしようとした瞬間に地獄が始まります
+            しかし、レビューしようとした瞬間に地獄が始まります
           </p>
         </div>
       </div>
@@ -73,7 +73,7 @@
     <!-- ナビゲーション -->
     <div class="navigation">
       <button class="nav-button prev">← 前へ</button>
-      <button class="nav-button home">🏠 ホーム</button>
+      <button class="nav-button home">ホーム</button>
       <button class="nav-button next">次へ →</button>
     </div>
 
