--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_06.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_06.html
@@ -15,7 +15,7 @@
     <!-- スライドコンテナ -->
     <div class="slide-container">
       <div class="slide-content">
-        <h2>✨ 独立環境があると何が変わるのか</h2>
+        <h2>独立環境があると何が変わるのか</h2>
 
         <div class="card">
           <h3>各ブランチが独自のURLを持つ</h3>
@@ -57,15 +57,15 @@
         <div class="grid" style="margin-top: 2rem">
           <div class="card">
             <p style="font-size: 1.2rem; margin: 0">
-              ✅ ブランチを切り替える必要なし
+              ブランチを切り替える必要なし
             </p>
           </div>
           <div class="card">
-            <p style="font-size: 1.2rem; margin: 0">✅ URLにアクセスするだけ</p>
+            <p style="font-size: 1.2rem; margin: 0">URLにアクセスするだけ</p>
           </div>
           <div class="card">
             <p style="font-size: 1.2rem; margin: 0">
-              ✅ 複数タブで同時に比較可能
+              複数タブで同時に比較可能
             </p>
           </div>
         </div>
@@ -78,7 +78,7 @@
     <!-- ナビゲーション -->
     <div class="navigation">
       <button class="nav-button prev">← 前へ</button>
-      <button class="nav-button home">🏠 ホーム</button>
+      <button class="nav-button home">ホーム</button>
       <button class="nav-button next">次へ →</button>
     </div>
 
