--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_08.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_08.html
@@ -15,7 +15,7 @@
     <!-- スライドコンテナ -->
     <div class="slide-container">
       <div class="slide-content">
-        <h2>🏗️ システム概要</h2>
+        <h2>システム概要</h2>
 
         <div class="architecture">
           <div>[GitHub] → [GitHub Actions]</div>
@@ -30,23 +30,6 @@
           <div class="arrow">↓</div>
           <div>[Public URL]</div>
         </div>
-
-        <div class="grid">
-          <div class="card">
-            <h3 style="font-size: 1.2rem">📝 GitOps</h3>
-            <p>Gitをデプロイの単一信頼情報源に</p>
-          </div>
-
-          <div class="card">
-            <h3 style="font-size: 1.2rem">🤖 自動化</h3>
-            <p>プッシュするだけで全て自動</p>
-          </div>
-
-          <div class="card">
-            <h3 style="font-size: 1.2rem">🔒 セキュア</h3>
-            <p>Cloudflareの保護付き</p>
-          </div>
-        </div>
       </div>
     </div>
 
@@ -56,7 +39,7 @@
     <!-- ナビゲーション -->
     <div class="navigation">
       <button class="nav-button prev">← 前へ</button>
-      <button class="nav-button home">🏠 ホーム</button>
+      <button class="nav-button home">ホーム</button>
       <button class="nav-button next">次へ →</button>
     </div>
 
