--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_10.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_10.html
@@ -15,7 +15,7 @@
     <!-- スライドコンテナ -->
     <div class="slide-container">
       <div class="slide-content">
-        <h2>🛠️ 使用する技術スタック</h2>
+        <h2>使用する技術スタック</h2>
 
         <div class="grid">
           <div class="card">
@@ -61,7 +61,7 @@
     <!-- ナビゲーション -->
     <div class="navigation">
       <button class="nav-button prev">← 前へ</button>
-      <button class="nav-button home">🏠 ホーム</button>
+      <button class="nav-button home">ホーム</button>
       <button class="nav-button next">次へ →</button>
     </div>
 
