--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_01.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_01.html
@@ -37,7 +37,7 @@
     <!-- ナビゲーション -->
     <div class="navigation">
       <button class="nav-button prev">← 前へ</button>
-      <button class="nav-button home">🏠 ホーム</button>
+      <button class="nav-button home">ホーム</button>
       <button class="nav-button next">次へ →</button>
     </div>
 
