--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_02.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_02.html
@@ -46,7 +46,7 @@ git checkout feature/xxx
     <!-- ナビゲーション -->
     <div class="navigation">
       <button class="nav-button prev">← 前へ</button>
-      <button class="nav-button home">🏠 ホーム</button>
+      <button class="nav-button home">ホーム</button>
       <button class="nav-button next">次へ →</button>
     </div>
 
