--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_04.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_04.html
@@ -15,7 +15,7 @@
     <!-- スライドコンテナ -->
     <div class="slide-container">
       <div class="slide-content">
-        <h2>📈 この記事を読むことで得られるメリット</h2>
+        <h2>この記事を読むことで得られるメリット</h2>
 
         <ul style="font-size: 1.3rem; line-height: 2">
           <li>
@@ -68,7 +68,7 @@
     <!-- ナビゲーション -->
     <div class="navigation">
       <button class="nav-button prev">← 前へ</button>
-      <button class="nav-button home">🏠 ホーム</button>
+      <button class="nav-button home">ホーム</button>
       <button class="nav-button next">次へ →</button>
     </div>
 
