--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_09.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_09.html
@@ -399,17 +399,9 @@
     <!-- スライドコンテナ -->
     <div class="slide-container">
       <div class="slide-content">
-        <h2>🏗️ ブランチごとの環境分離アーキテクチャ</h2>
+        <h2>ブランチごとの環境分離アーキテクチャ</h2>
 
         <div class="architecture-diagram">
-          <!-- GitHub Repository Header -->
-          <div class="github-header">
-            <div class="github-title">
-              <span>🐙</span>
-              <span>GitHub Repository</span>
-            </div>
-          </div>
-
           <!-- Branch Environments Grid -->
           <div class="branch-environments">
             <!-- Main Branch Column -->
@@ -424,9 +416,7 @@
 
               <!-- CI/CD -->
               <div class="pipeline-stage">
-                <div class="stage-icon">🔨</div>
                 <div class="stage-title">Build & Deploy</div>
-                <div class="stage-subtitle">GitHub Actions</div>
               </div>
 
               <!-- Kubernetes Namespace -->
@@ -434,14 +424,6 @@
                 <div class="namespace-title">
                   <span>☸️</span>
                   <span>Namespace: main</span>
-                </div>
-                <div class="pod-indicator">
-                  <span class="pod-dot"></span>
-                  <span>Pod: journee-main</span>
-                </div>
-                <div class="pod-indicator">
-                  <span class="pod-dot"></span>
-                  <span>Service: journee-main</span>
                 </div>
               </div>
 
@@ -455,7 +437,6 @@
 
               <!-- Public URL -->
               <div class="url-box">
-                <div class="url-icon">🌐</div>
                 <div class="url-text">main.journee.dev</div>
               </div>
             </div>
@@ -472,9 +453,7 @@
 
               <!-- CI/CD -->
               <div class="pipeline-stage">
-                <div class="stage-icon">🔨</div>
                 <div class="stage-title">Build & Deploy</div>
-                <div class="stage-subtitle">GitHub Actions</div>
               </div>
 
               <!-- Kubernetes Namespace -->
@@ -482,14 +461,6 @@
                 <div class="namespace-title">
                   <span>☸️</span>
                   <span>Namespace: feature-A</span>
-                </div>
-                <div class="pod-indicator">
-                  <span class="pod-dot"></span>
-                  <span>Pod: journee-feat-a</span>
-                </div>
-                <div class="pod-indicator">
-                  <span class="pod-dot"></span>
-                  <span>Service: journee-feat-a</span>
                 </div>
               </div>
 
@@ -503,7 +474,6 @@
 
               <!-- Public URL -->
               <div class="url-box">
-                <div class="url-icon">🌐</div>
                 <div class="url-text">feature-a.journee.dev</div>
               </div>
             </div>
@@ -520,9 +490,7 @@
 
               <!-- CI/CD -->
               <div class="pipeline-stage">
-                <div class="stage-icon">🔨</div>
                 <div class="stage-title">Build & Deploy</div>
-                <div class="stage-subtitle">GitHub Actions</div>
               </div>
 
               <!-- Kubernetes Namespace -->
@@ -530,14 +498,6 @@
                 <div class="namespace-title">
                   <span>☸️</span>
                   <span>Namespace: feature-B</span>
-                </div>
-                <div class="pod-indicator">
-                  <span class="pod-dot"></span>
-                  <span>Pod: journee-feat-b</span>
-                </div>
-                <div class="pod-indicator">
-                  <span class="pod-dot"></span>
-                  <span>Service: journee-feat-b</span>
                 </div>
               </div>
 
@@ -551,15 +511,9 @@
 
               <!-- Public URL -->
               <div class="url-box">
-                <div class="url-icon">🌐</div>
                 <div class="url-text">feature-b.journee.dev</div>
               </div>
             </div>
-          </div>
-
-          <!-- Legend -->
-          <div class="legend">
-            💡 各ブランチから独立した環境が自動生成される
           </div>
         </div>
       </div>
@@ -571,7 +525,7 @@
     <!-- ナビゲーション -->
     <div class="navigation">
       <button class="nav-button prev">← 前へ</button>
-      <button class="nav-button home">🏠 ホーム</button>
+      <button class="nav-button home">ホーム</button>
       <button class="nav-button next">次へ →</button>
     </div>
 
