--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_11.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_11.html
@@ -15,7 +15,7 @@
     <!-- スライドコンテナ -->
     <div class="slide-container">
       <div class="slide-content">
-        <h2>🔄 デプロイワークフロー</h2>
+        <h2>デプロイワークフロー</h2>
 
         <div
           style="
@@ -64,7 +64,7 @@
     <!-- ナビゲーション -->
     <div class="navigation">
       <button class="nav-button prev">← 前へ</button>
-      <button class="nav-button home">🏠 ホーム</button>
+      <button class="nav-button home">ホーム</button>
       <button class="nav-button next">次へ →</button>
     </div>
 
