update: 地獄が始まりますをよりかっこよく

--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_04.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_04.html
@@ -15,7 +15,7 @@
     <!-- スライドコンテナ -->
     <div class="slide-container">
       <div class="slide-content">
-        <h2>この記事を読むことで得られるメリット</h2>
+        <h2>実現できること</h2>
 
         <ul style="font-size: 1.3rem; line-height: 2">
           <li>
@@ -42,23 +42,6 @@
           </li>
         </ul>
 
-        <div
-          class="card"
-          style="
-            margin-top: 3rem;
-            background: linear-gradient(
-              135deg,
-              var(--accent-blue) 0%,
-              var(--accent-purple) 100%
-            );
-            border: none;
-          "
-        >
-          <p style="font-size: 1.4rem; text-align: center; margin: 0">
-            個人開発でここまでの仕組みを構築している例は<br />
-            <strong style="font-size: 1.6rem">まだ少ない</strong>
-          </p>
-        </div>
       </div>
     </div>
 
