--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_05.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_05.html
@@ -113,8 +113,8 @@
               line-height: 1.6;
             "
           >
-            しかし、レビューしようとした瞬間に<br />
-            <span style="font-size: 2.4rem">地獄が始まります</span>
+            レビューしようとした瞬間に<br />
+            <span style="font-size: 2.4rem">あの儀式が始まります</span>
           </p>
         </div>
       </div>
