--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_06.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_06.html
@@ -15,7 +15,7 @@
     <!-- スライドコンテナ -->
     <div class="slide-container">
       <div class="slide-content">
-        <h2>独立環境があると何が変わるのか</h2>
+        <h2>独立環境があると簡単にテストできる</h2>
 
         <div class="card">
           <h3>各ブランチが独自のURLを持つ</h3>
@@ -23,7 +23,6 @@
             <div
               style="display: flex; align-items: center; margin-bottom: 1.5rem"
             >
-              <div style="font-size: 2rem; margin-right: 1rem">🔐</div>
               <code style="font-size: 1.2rem">feature-auth.example.com</code>
               <span style="margin-left: 1rem; color: var(--accent-green)"
                 >← 常時稼働</span
@@ -33,7 +32,6 @@
             <div
               style="display: flex; align-items: center; margin-bottom: 1.5rem"
             >
-              <div style="font-size: 2rem; margin-right: 1rem">💬</div>
               <code style="font-size: 1.2rem"
                 >feature-comments.example.com</code
               >
@@ -45,7 +43,6 @@
             <div
               style="display: flex; align-items: center; margin-bottom: 1.5rem"
             >
-              <div style="font-size: 2rem; margin-right: 1rem">📄</div>
               <code style="font-size: 1.2rem">feature-pdf.example.com</code>
               <span style="margin-left: 1rem; color: var(--accent-green)"
                 >← 常時稼働</span
@@ -54,21 +51,6 @@
           </div>
         </div>
 
-        <div class="grid" style="margin-top: 2rem">
-          <div class="card">
-            <p style="font-size: 1.2rem; margin: 0">
-              ブランチを切り替える必要なし
-            </p>
-          </div>
-          <div class="card">
-            <p style="font-size: 1.2rem; margin: 0">URLにアクセスするだけ</p>
-          </div>
-          <div class="card">
-            <p style="font-size: 1.2rem; margin: 0">
-              複数タブで同時に比較可能
-            </p>
-          </div>
-        </div>
       </div>
     </div>
 
