--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_05.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_05.html
@@ -63,7 +63,7 @@
     <!-- スライドコンテナ -->
     <div class="slide-container">
       <div class="slide-content">
-        <h2>具体的にどんな問題があるのか</h2>
+        <h2>AI Agentで並列開発に挑戦するあなた</h2>
 
         <div class="grid">
           <div class="card">
@@ -113,7 +113,7 @@
               line-height: 1.6;
             "
           >
-            レビューしようとした瞬間に<br />
+            しかし、レビューしようとした瞬間に<br />
             <span style="font-size: 2.4rem">あの儀式が始まります</span>
           </p>
         </div>
