--- a/slides/ISOLATED_BRANCH_ENV/slides/slide_13.html
+++ b/slides/ISOLATED_BRANCH_ENV/slides/slide_13.html
@@ -29,7 +29,9 @@
         </div>
 
         <p style="text-align: center; font-size: 1.5rem; margin-top: 1rem">
-          ご清聴ありがとうございました
+          <strong>
+            ご清聴ありがとうございました
+          </strong>
         </p>
       </div>
     </div>
